src/main/resources/static/footer.css
footer {
    width:100vw;
    padding: 10rem;
    text-align: center;
}

footer p {
    font-size:13px;
    color:#CCC;
    padding-bottom:0;
    margin-bottom:8px;
}

footer h3 {
    color: rgba(0, 255, 34, 0.85);
}

footer p.description {
    padding-bottom:15px;
}

